--- a/style.css
+++ b/style.css
@@ -34,3 +34,42 @@ body{
     font-weight: 100;
     margin-left: 10px;
 }
+
+
+
+
+
+.option-bar{
+    display: flex;
+    background-color: rgb(248, 90, 33);
+    margin-top: -20px;
+    margin-left: 150px;
+    margin-right: 150px;
+    border-radius: 20px;
+}
+.optionbar-content{
+    width: 50%;
+    display: flex;
+    margin-left: 20%;
+}
+.optionbar-content li{
+    list-style-type: none;
+    padding: 1%;
+    margin: 2%;
+}
+
+.optionbar-content img{
+    height: 25px;
+    padding-left: 5%;
+    padding-top: 3%;
+}
+
+.optionbar-content span{
+    margin-top: 9px;
+    color: white;
+}
+
+.optionbar-content li a{
+    text-decoration: none;
+    color: white;
+}
