--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
 .optionbar-content{
     width: 50%;
     display: flex;
-    margin-left: 20%;
+    margin-left: 10%;
 }
 .optionbar-content li{
     list-style-type: none;
@@ -60,12 +60,12 @@ body{
 
 .optionbar-content img{
     height: 25px;
-    padding-left: 5%;
+    padding-left: 60%;
     padding-top: 3%;
 }
 
 .optionbar-content span{
-    margin-top: 9px;
+    margin-top: 13px;
     color: white;
 }
 
@@ -98,4 +98,27 @@ body{
     border-radius: 20px;
     box-shadow: 2px 2px 10px gray;
     margin-top: 30px;
+}
+
+
+
+
+
+.section-two{
+    display: flex;
+    background-image: url(images/shapes/Frame\ 59.jpg);
+}
+.sectiontwo-content{
+    width: 50%;
+    padding: 5%;
+}
+.sectiontwo-content img{
+    width: 80%;
+    height: 100%;
+}
+.sectiontwo-content h1{
+    margin-top: 40px;
+}
+.para{
+    margin-bottom: 50px;
 }
