--- a/style.css
+++ b/style.css
@@ -206,6 +206,24 @@ body{
     width: 150%;
     margin-top: 20%;
     border-radius: 48%;
-    
+}
+
+
+
+
+
+.section-like{
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    box-shadow: 5px 5px 15px gray;
+    border-radius: 20px;
+}
+.like-element{
+    width: 40%;
+    padding: 5%;
+    margin-left: 4%;
 
 }
