--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     font-family: 'Kanit', sans-serif;
     font-family: 'Otomanopee One', sans-serif;
 }
+/*top address and time bar with logo*/
 .top-bar{
     background-color: rgb(248, 162, 152);
     border-end-start-radius: 40px;
@@ -39,7 +40,7 @@ body{
 
 
 
-
+/*Menuebar with home,about,menu and so on*/
 
 .option-bar{
     display: flex;
@@ -76,7 +77,7 @@ body{
     color: white;
 }
 
-
+/*Here a welcome note with order button and a pic added as section one*/
 
 .section-one{
     display: flex;
@@ -104,7 +105,7 @@ body{
 
 
 
-
+/*Here in section two about section with photo has been added*/
 
 .section-two{
     display: flex;
@@ -125,7 +126,7 @@ body{
     margin-bottom: 80px;
 }
 
-
+/*In this section the card of recipies with good quotes has been added*/
 
 .section-three{
     margin-top: 100px;
@@ -155,7 +156,7 @@ body{
 }
 
 
-
+/*In this section the feedback taking system designed*/
 
 
 .feedback-section{
@@ -209,7 +210,7 @@ body{
 }
 
 
-
+/*The likes of several social media has been designed*/
 
 
 .section-like{
@@ -226,4 +227,27 @@ body{
     padding: 5%;
     margin-left: 4%;
 
+}
+
+
+/*Footer section contains the restaurent name with good quotes*/
+
+
+.footer{
+    margin-top: 100px;
+    height: 30vh;
+    background-color: darkslategrey;
+    
+}
+.footer-content{
+    text-align: center;
+}
+.footer h2{
+    padding-top: 2%;
+}
+.footer p{
+    color: white;
+}
+.gray{
+    color:rgb(5, 19, 32);
 }
